made dark mode the default, fixed styling bugs

--- a/app/Components/CSS_Modules/CCLighting.module.css
+++ b/app/Components/CSS_Modules/CCLighting.module.css
@@ -20,6 +20,9 @@
   font-size: 1.3rem;
   line-height: 2rem;
 }
+.anchor {
+  color: orange;
+}
 .anchors {
   display: flex;
   width: 100%;
@@ -27,7 +30,7 @@
   margin: 2rem auto;
 }
 .anchors > a {
-  padding: 2rem;
+  padding: 0.5rem;
   border: 1px solid;
   border-radius: 0.4rem;
   background-color: #f0f0f0;
@@ -39,14 +42,13 @@
   text-decoration: underline;
 }
 .back {
-  padding: 1rem;
+  padding: 0.5rem;
   border: 1px solid black;
   border-radius: 0.4rem;
   text-decoration: none;
   color: black;
   background-color: #f0f0f0;
   transition: all ease 0.3s;
-  padding: 1rem;
 }
 .back:hover {
   text-decoration: underline;
